--- a/back/package.json
+++ b/back/package.json
@@ -10,6 +10,9 @@
   "license": "ISC",
   "description": "Tp2 Programación Web",
   "dependencies": {
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "morgan": "^1.10.0",
+    "mysql2": "^3.11.3",
+    "sequelize": "^6.37.5"
   }
 }
